syntax = "proto3";

option go_package = "./pb";

package pb;

message VideoLikeReq {
  int64 video_id = 1;
  int64 user_id = 2;
}

message VideoLikeResp {
}

message VideoUnlikeReq {
  int64 video_id = 1;
  int64 user_id = 2;
}

message VideoUnlikeResp {
}

message GetVideoLikeCountByVideoIdReq {
  int64 video_id = 1;
}

message GetVideoLikeCountByVideoIdResp {
  int64 like_count = 2;
}

message GetUserLikeVideoIdListReq {
  int64 user_id = 1;
}

message GetUserLikeVideoIdListResp {
  repeated int64 video_id_list = 1;
}

service likerpc {
  rpc VideoLike(VideoLikeReq) returns (VideoLikeResp);
  rpc VideoUnlike(VideoUnlikeReq) returns (VideoLikeResp);
  rpc GetVideoLikeCountByVideoId(GetVideoLikeCountByVideoIdReq) returns (GetVideoLikeCountByVideoIdResp);
  rpc GetUserLikeVideoIdList(GetUserLikeVideoIdListReq) returns (GetUserLikeVideoIdListResp);
}

